<resources>
    <string name="app_name">Yumi</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_map">MapActivity</string>
    <string name="title_activity_maps">Map</string>
    <string name="passwordWrong">Password must consist of min. 8 characters and at least one digit.</string>
    <string name="signupError">There has been an error. Check internet connection and try again. If that does not help than conctact our helpline.</string>
    <string name="signupEmail">Wrong login ! </string>
    <string name="signupBad">Missing details in the form !</string>
    <string name="loginNotVerified">Please verify email/phone</string>
    <string name="insufficient">Please top up your balance</string>
    <string name="noNetwork">Network problem. Check internet connection.</string>
    <string name="verification">Your details are being verified. It should be done in any minute now</string>
    <string name="capture">Dokument</string>
    <string name="wrongPassword">Błędne hasło ! </string>
    <string name="passwordChanged">Password updated</string>
    <string name="see">Show picture</string>
    <string name="password">Password</string>
    <string name="newPassword">New password</string>
    <string name="oldPassword">Old password</string>
    <string name="changePassword">Send</string>
    <string name="changePassword2">Zmień hasło</string>
    <string name="confrimPassword">Confirm password</string>
    <string name="firstname">First name</string>
    <string name="surname">Second name</string>
    <string name="id">Document no.</string>
    <string name="address1">Address</string>
    <string name="address2">Address optional</string>
    <string name="phone">Phone number</string>
    <string name="balance">Balance</string>
    <string name="register"> <u>Register here. </u> </string>
    <string name="register2">REGISTER</string>
    <string name="topup">TOP-UP BALANCE</string>
    <string name="recover"> <u> Forgot passsword? </u> </string>
    <string name="login">Log in</string>
    <string name="loginBad">Wrong login or password. Check also internet connection</string>
    <string name="free">Free minutes</string>
    <string name="profile">Profile</string>
    <string name="logout">Sign out</string>
    <string name="map">Choose scooter</string>
    <string name="proceed">Proceed</string>
    <string name="reserve">Book for 15 min</string>
    <string name="start">START</string>
    <string name="finish">FINISH</string>
    <string name="date">Date</string>
    <string name="transaction">Transaction</string>
    <string name="charge">Charge</string>
    <string name="cancel">Cancel</string>
    <string name="description">Scooter no.</string>
    <string name="CameraPermitTitle">Please give permit for camera function</string>
    <string name="CameraPermitText">Without camera switched on we will not be able to verify your identity.</string>
    <string name="StoragePermitTitle">Please give permit for storage function</string>
    <string name="StoragePermitText">Without storage permit we will not be able to save and upload to verify your driving license.</string>
    <string name="GPSpermitTitle">Please give permit for GPS function.</string>
    <string name="GPSpermitText">Without GPS switched on we will not be able to find you closest scooters.</string>
    <string name="PermisionGranted">Permission Granted</string>
    <string name="PermisionDenied">Permision Denied</string>
    <string name="Metres"> m</string>
    <string name="km">km</string>
    <string name="ScooterTaken">Scooter has just been reserved. Try to find another one.</string>
    <string name="OutOfBounds">Scooter is out of service bounds. Park it in orange zone of the map.</string>
    <string name="NotLoggingOut">Before logging out you need to release reserved scooter.</string>
    <string name="Starting">Please wait. Engaging scooter in progress.</string>
    <string name="Stopping">Please wait. Disengaging scooter in progress.</string>
    <string name="AreYouSure">Are you sure ?</string>
    <string name="Switchingoff">Scooter will be switched off !</string>
    <string name="termsAndConditions">When registering you agree on the <a href="http://yumi.eco/regulamin/">Terms and Conditions</a> and <a href="http://yumi.eco/polityka-prywatnosci-cookies/">Privacy Policy</a></string>
    <string name="payu_language">auto</string>
    <string name="payu_environment">local</string>
    <string name="payu_token_service_class_full_qualified_name"></string>
    <string name="overtime">15 minutes of reservation has passed !</string>
    <string name="titleEmail">Give us your email and we will send you reset link</string>
    <string name="history">Rides history</string>
    <string name="payment">Amount</string>
    <string name="TransactionHistory">Transaction history</string>
    <string name="details">Account details</string>
    <string name="idTitle">If your details has changed, please contact us on email biuro@yumi.eco</string>
    <string name="passwordTitle">Change password</string>
    <string name="registerText">Fill your data to register</string>
    <string name="registerTitle">Registration</string>
    <string name="optional">city, postal code</string>
    <string name="captureTitle">Send us photo of driving license or national ID (if born in 1994 or earlier)</string>
    <string name="back">&lt; Back</string>
    <string name="haveAccount">I have an account</string>
    <string name="welcome1">Thank you!</string>
    <string name="welcome2">You have just registered to YUMI</string>
    <string name="welcome3">Confirm your registration by clicking the link in verification mail we have sent you.</string>
    <string name="welcome4">All the best from our team and we wish you good trips with Yumi</string>
    <string name="off">SWITCH OFF</string>
    <string name="loggedIn">logged in as</string>
    <string name="welcome5">Welcome to Yumi app!</string>
    <string name="welcome6">You need to be authenticated user to rent scooters!</string>
    <string name="nooption">Option is not available yet</string>
    <string name="chargeForRide">Charge for the ride</string>
    <string name="timeOfFin">Time when finished</string>
    <string name="condition">Condition of the scooter</string>
    <string name="accountBalance">Account balance</string>
    <string name="needtopup">You need to top up balance</string>
    <string name="needemail">You need to verify your phone</string>
    <string name="historyy">History</string>
    <string name="detailss">Details</string>
    <string name="payments">Płatności</string>
    <string name="balancee">Balance</string>
    <string name="differentPass">Passwords are different!</string>
    <string name="Policy">I understand terms of <a href="http://yumi.eco/polityka-prywatnosci-cookies/">Privacy policy</a> about processing my personal data and I agree on them. </string>
    <string name="Readme">I understand and agree on the right of withdrawal and <a href="http://yumi.eco/regulamin/">Terms of policy.</a> </string>
    <string name="RODO">I hereby give consent for my personal data included in this form to be processed by YUMI Łukasz Mierzejewski in Gdańsk for the purposes of registering my profile in mobile app to be able to use Yumi service.</string>
    <string name="scooter">Condition of scooter</string>
    <string name="wouldYou">Would you like to describe the problem?</string>
    <string name="NO">NO</string>
    <string name="YES">YES</string>
    <string name="verificationNote">Personal details verification</string>
    <string name="verificationNote2">Congratulations! Your personal details has been successfully verified.</string>
    <string name="mainTitle">The cheapest scooters in the city</string>
    <string name="price">from 49gr/min</string>
    <string name="tryme">try me</string>
    <string name="update">There is new version of our app.</string>
    <string name="update2">Would you like to update it ?</string>
    <string name="update3">To continue using our service we need you to update it?</string>
    <string name="email">Email</string>
    <string name="biuro">You can send picture on biuro@yumi.eco</string>
    <string name="longer">Can\'t add picture here?</string>
    <string name="longerTitle"> Send us mail on biuro@yumi.eco</string>
    <string name="phone2">We would like to verify your phone number</string>
    <string name="phone3">You should recieve verification code ...</string>
    <string name="code">WRITE CODE HERE</string>
    <string name="changePhone">Change phone no</string>
    <string name="AuthFailed">Authentication failed</string>
    <string name="phoneNo">9-digit</string>
    <string name="codeError">Wrong code!</string>
    <string name="wrongPhone">Wrong phone number</string>
    <string name="givePhone">Please provide your phone number</string>
    <string name="card">Payment card</string>
    <string name="addedCard">Added payment cards</string>
    <string name="save">SAVE</string>
    <string name="addCard">Add card</string>
    <string name="delete">delete</string>
    <string name="erase">Erasing card</string>
    <string name="erease">Erasing card</string>
    <string name="wrongCode">Wrong code</string>
    <string name="cardName">Charge for the card verification is 0.1 zł</string>
    <string name="call">help</string>
    <string name="repay">Unsuccessful payment</string>
    <string name="repayTry">Try to charge card again</string>
    <string name="front">FRONT</string>
    <string name="rear">REAR</string>
    <string name="born">Date of birth </string>
    <string name="dateFormat">dd/mm/yyyy</string>
    <string name="dl">With your age, unfortunatelly ID is not enough.</string>
    <string name="dlTitle">Are you sending driving license?</string>
    <string name="yes">YES</string>
    <string name="no">NO</string>
    <string name="tPayReadme"><a href="https://s3.eu-central-1.amazonaws.com/secure-pliki/informacja_dla_konsumenta.pdf?3">Tpay terms of conditions.</a></string>
</resources>
