



<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/relative_background"
    tools:context="eco.yumi.Register2Activity"
    android:fillViewport="true"
    android:orientation="vertical">



    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/relativeLayout"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/back"
            android:id="@+id/back2"
            android:layout_marginStart="20dp"
            android:fontFamily="@font/comfortaa"
            android:textSize="12dp"
            android:textColor="@color/colorAccent"
            />
        <TextView
            android:id="@+id/phoneTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/phone"
            android:layout_alignParentTop="true"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/comfortaa"
            android:text="@string/phone"
            android:textSize="13dp" />

        <EditText
            android:id="@+id/phone"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/phoneTitle"
            android:layout_centerHorizontal="true"
            android:inputType="phone"
            android:textColorHint="@color/DarkGrey" />

        <TextView
            android:id="@+id/idnTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/phone"
            android:layout_below="@id/phone"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/comfortaa"
            android:text="@string/id"
            android:textSize="13dp" />

        <EditText
            android:id="@+id/idno"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/idnTitle"
            android:layout_centerHorizontal="true"
            android:layout_marginEnd="25dp"
            android:inputType="text"
            android:textColorHint="@color/DarkGrey" />

        <TextView
            android:id="@+id/addressTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/phone"
            android:layout_below="@id/idno"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/comfortaa"
            android:text="@string/address1"
            android:textSize="13dp" />

        <EditText
            android:id="@+id/address"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/addressTitle"
            android:layout_centerHorizontal="true"
            android:layout_marginEnd="25dp"
            android:layout_marginTop="10dp"
            android:inputType="text"
            android:textColorHint="@color/DarkGrey" />



<LinearLayout
    android:layout_below="@+id/address"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_centerHorizontal="true"
    android:layout_marginTop="10dp"
    android:id="@+id/captureTitle">
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <Button
            android:id="@+id/frontCapture"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:layout_gravity="center_vertical"
            android:background="@drawable/button_shape_end"
            android:fontFamily="@font/comfortaa"
            android:textColor="@color/colorPrimary"
            android:text="@string/front"
            android:layout_marginBottom="3dp"/>
            <Button
                android:id="@+id/rearCapture"
                android:layout_width="wrap_content"
                android:layout_height="35dp"
                android:layout_gravity="center_vertical"
                android:fontFamily="@font/comfortaa"
                android:textColor="@color/colorPrimary"
                android:background="@drawable/button_shape_end"
                android:text="@string/rear" />
    </LinearLayout>
    <TextView
        android:id="@+id/capture"
        android:layout_width="230dp"
        android:layout_gravity="fill_vertical"
        android:layout_height="match_parent"
        android:gravity="center_vertical"
        android:fontFamily="@font/comfortaa"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:text="@string/captureTitle"
        android:textSize="13dp" />
</LinearLayout>
        <LinearLayout
            android:id="@+id/terms"
            android:layout_below="@+id/captureTitle"
            android:layout_width="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >

            <CheckBox
                android:id="@+id/cTerms"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:checked="false"
                android:shadowColor="@color/colorSecondary" />
        <TextView
            android:id="@+id/readme"
            android:layout_width="wrap_content"
            android:layout_gravity="center_vertical"

            android:layout_height="wrap_content"
            android:text="@string/Readme"
            android:textSize="9sp"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/terms2"
            android:layout_below="@+id/terms"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >


        <CheckBox
                android:id="@+id/cTerms2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:checked="false"
                android:shadowColor="@color/colorSecondary" />
            <TextView
                android:id="@+id/RODO"
                android:layout_gravity="center_vertical"

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/RODO"
                android:textSize="9sp"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/terms3"
            android:layout_below="@+id/terms2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:orientation="horizontal"
            >


        <CheckBox
                android:id="@+id/cTerms3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:checked="false"
                android:shadowColor="@color/colorSecondary" />
            <TextView
                android:id="@+id/policy"
                android:layout_gravity="center_vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Policy"
                android:textSize="9sp"/>
        </LinearLayout>

        <Button
            android:id="@+id/register"
            android:layout_width="wrap_content"
            android:layout_height="45dp"
            android:layout_below="@+id/terms3"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="3dp"
            android:layout_marginTop="10dp"
            android:layout_marginStart="10dp"
            android:background="@drawable/button_shape_start"
            android:paddingLeft="40dp"
            android:paddingRight="40dp"
            android:text="@string/register2"
            android:textColor="@color/colorSecondary" />

        <TextView
            android:layout_width="wrap_content"
            android:id="@+id/foot"
            android:layout_height="wrap_content"
            android:layout_below="@+id/register"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="3dp"
            android:layout_marginTop="3dp"
            android:fontFamily="@font/comfortaa"
            android:text="2/2"
            android:textSize="13dp" />

    </RelativeLayout>
</ScrollView>
</RelativeLayout>

