<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main"
    tools:context="eco.yumi.MainActivity"
    android:orientation="vertical">
    <ImageView
        android:id="@+id/imageView"
        android:layout_width="170dp"
        android:layout_alignParentEnd="true"
        android:layout_above="@+id/textView"
        android:layout_height="100dp"
        android:layout_marginEnd="10dp"
        android:padding="20dp"
        android:layout_marginTop="10dp"
        android:src="@drawable/logotype"
        app:srcCompat="@drawable/logotype" />
    <TextView
        android:id="@+id/textView"
        android:layout_width="170dp"
        android:gravity="center_horizontal"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_above="@+id/textView2"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="10dp"
        android:textSize="24dp"
        android:layout_marginEnd="10dp"
        android:fontFamily="@font/comfortaa"
        android:textColor="@color/colorPrimary"
        android:text="@string/mainTitle"
        />
    <TextView
        android:id="@+id/textView2"
        android:layout_width="170dp"
        android:gravity="center_horizontal"
        android:layout_above="@+id/login"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_centerVertical="true"
        android:layout_marginBottom="40dp"
        android:layout_marginTop="10dp"
        android:textSize="18dp"
        android:layout_marginEnd="10dp"
        android:fontFamily="@font/comfortaa"
        android:textColor="@color/colorPrimary"
        android:text="@string/price"
        />
    <Button
        android:id="@+id/login"
        android:layout_width="150dp"
        android:layout_height="35dp"
        android:layout_alignBottom="@+id/register"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="50dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/button_shape_log"
        android:fontFamily="@font/comfortaa"
        android:text="@string/login"
        android:textAllCaps="true"
        android:textColor="@color/colorPrimary" />
    <Button
        android:id="@+id/register"
        android:layout_width="150dp"
        android:layout_height="35dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="90dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/button_shape_register"
        android:fontFamily="@font/comfortaa"
        android:text="@string/register"
        android:textAllCaps="true"
        android:textColor="@color/colorPrimary" />
</RelativeLayout>
