<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:background="@drawable/mainblur"
    tools:context="eco.yumi.Main2Activity"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="170dp"
        android:layout_centerHorizontal="true"
        android:layout_above="@+id/relative"
        android:layout_height="100dp"
        android:padding="20dp"
        android:layout_marginTop="10dp"
        android:src="@drawable/logotype"
        app:srcCompat="@drawable/logotype" />


    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_marginTop="20dp"
        android:id="@+id/relative"
        android:layout_height="wrap_content"
        android:background="@drawable/relative_background"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:alpha="0.8"
        >
        <EditText
            android:id="@+id/email"
            android:layout_width="257dp"
            android:layout_height="39dp"
            android:hint="Login"
            android:inputType="textEmailAddress"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"/>

        <EditText
            android:id="@+id/password"
            android:layout_width="257dp"
            android:layout_height="39dp"
            android:hint="@string/password"
            android:inputType="textWebPassword"
            android:layout_below="@+id/email"
            android:layout_marginTop="10dp"
            android:layout_centerHorizontal="true"/>

        <Button
            android:id="@+id/login"
            android:layout_below="@id/password"
            android:layout_marginTop="40dp"
            android:layout_centerHorizontal="true"
            android:background="@drawable/button_shape_login"
            android:text="@string/login"
            android:textColor="@color/colorAccent"
            android:fontFamily="@font/comfortaa"
            android:layout_width="150dp"
            android:layout_height="30dp"
            />

        <TextView
            android:id="@+id/recover"
            android:layout_width="331dp"
            android:layout_height="18dp"
            android:layout_marginTop="20dp"
            android:layout_centerHorizontal="true"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center"
            android:layout_below="@id/login"
            android:text="@string/recover" />

    </RelativeLayout>
</RelativeLayout>
