<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="eco.yumi.History">
    <android.support.v7.widget.Toolbar xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorAccent"
        android:contentInsetLeft="0dp"
        android:contentInsetStart="0dp"
        app:contentInsetLeft="0dp"
        app:contentInsetStart="0dp"
        android:contentInsetRight="0dp"
        android:contentInsetEnd="0dp"
        app:contentInsetRight="0dp"
        app:contentInsetEnd="0dp"
        android:elevation="20dp"
        android:id="@+id/toolbar">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/history"
                android:fontFamily="@font/comfortaa"
                android:textSize="20dp"
                android:textColor="@color/colorPrimary"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                />

            <ImageButton
                android:id="@+id/menu"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:adjustViewBounds="true"
                android:background="#00000000"
                android:elevation="20dp"
                android:padding="20dp"
                android:scaleType="fitCenter"
                android:src="@drawable/arrow" />

            <ImageButton
                android:id="@+id/phone"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_alignParentEnd="true"
                android:layout_alignParentTop="true"
                android:adjustViewBounds="true"
                android:background="#00000000"
                android:elevation="20dp"
                android:padding="20dp"
                android:scaleType="fitCenter"
                android:src="@drawable/phone" />
        </RelativeLayout>
    </android.support.v7.widget.Toolbar>

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_below="@+id/toolbar"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="30dp"
        android:src="@drawable/list"
        app:srcCompat="@drawable/list" />

    <TextView
        android:id="@+id/date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageView2"
        android:layout_marginLeft="10dp"
        android:text="@string/date"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageView2"
        android:layout_centerHorizontal="true"
        android:text="@string/description"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/charge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="10dp"
        android:layout_below="@+id/imageView2"
        android:text="@string/charge"
        android:textSize="18sp" />
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/cancel"
        android:layout_below="@+id/date">
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TableLayout
                android:id="@+id/tDate"

                android:layout_width="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                />
            <TableLayout
                android:id="@+id/tName"
                android:showDividers="middle"
                android:layout_centerHorizontal="true"
                android:divider="?android:listDivider"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                />
            <TableLayout
                android:id="@+id/tCharge"

                android:layout_width="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                />

        </RelativeLayout>
    </ScrollView>

</RelativeLayout>
